ParCLike.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCLike.y
-----------------------------------------------------------------------------

state 57 contains 1 shift/reduce conflicts.
state 84 contains 1 shift/reduce conflicts.
state 179 contains 1 shift/reduce conflicts.

rule 85 is unused
rule 86 is unused

terminal '&' is unused
terminal '\\' is unused
terminal L_quoted is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pStmtDecl -> StmtDecl                       (1)
	%start_pRExpr -> RExpr                             (2)
	%start_pLExpr -> LExpr                             (3)
	Integer -> L_integ                                 (4)
	Char -> L_charac                                   (5)
	Double -> L_doubl                                  (6)
	Ident -> L_ident                                   (7)
	Boolean -> 'True'                                  (8)
	Boolean -> 'False'                                 (9)
	RExpr -> '(' RExpr ')'                             (10)
	RExpr -> RExpr '||' RExpr                          (11)
	RExpr -> RExpr '&&' RExpr                          (12)
	RExpr -> RExpr '==' RExpr                          (13)
	RExpr -> RExpr '!=' RExpr                          (14)
	RExpr -> RExpr '<' RExpr                           (15)
	RExpr -> RExpr '<=' RExpr                          (16)
	RExpr -> RExpr '>' RExpr                           (17)
	RExpr -> RExpr '>=' RExpr                          (18)
	RExpr -> RExpr '+' RExpr                           (19)
	RExpr -> RExpr '-' RExpr                           (20)
	RExpr -> RExpr '*' RExpr                           (21)
	RExpr -> RExpr '/' RExpr                           (22)
	RExpr -> RExpr '%' RExpr                           (23)
	RExpr -> RExpr '^' RExpr                           (24)
	RExpr -> '!' RExpr                                 (25)
	RExpr -> '-' RExpr                                 (26)
	RExpr -> LExpr                                     (27)
	RExpr -> Ident '(' ListRExpr ')'                   (28)
	RExpr -> Integer                                   (29)
	RExpr -> Char                                      (30)
	RExpr -> Double                                    (31)
	RExpr -> Boolean                                   (32)
	FunCall -> Ident '(' ListRExpr ')'                 (33)
	ListRExpr ->                                       (34)
	ListRExpr -> RExpr                                 (35)
	ListRExpr -> RExpr ',' ListRExpr                   (36)
	LExpr -> LExpr1                                    (37)
	LExpr -> '*' RExpr                                 (38)
	LExpr -> '++' LExpr1                               (39)
	LExpr -> '--' LExpr1                               (40)
	LExpr1 -> LExpr2                                   (41)
	LExpr1 -> LExpr2 '++'                              (42)
	LExpr1 -> LExpr2 '--'                              (43)
	LExpr2 -> '(' LExpr ')'                            (44)
	LExpr2 -> BLExpr                                   (45)
	BLExpr -> BLExpr '[' RExpr ']'                     (46)
	BLExpr -> Ident                                    (47)
	Program -> ListDecl                                (48)
	ListDecl ->                                        (49)
	ListDecl -> ListDecl Decl                          (50)
	Decl -> Type ListVarDeclInit ';'                   (51)
	Decl -> Type ListIdent ';'                         (52)
	Decl -> Type Ident '(' ListParameter ')' ListStmtDecl   (53)
	ListVarDeclInit -> VarDeclInit                     (54)
	ListVarDeclInit -> VarDeclInit ',' ListVarDeclInit   (55)
	ListIdent -> Ident                                 (56)
	ListIdent -> Ident ',' ListIdent                   (57)
	ListStmtDecl -> StmtDecl                           (58)
	ListStmtDecl -> StmtDecl ',' ListStmtDecl          (59)
	Type -> Type '[' Integer ']'                       (60)
	Type -> Type '*'                                   (61)
	Type -> 'bool'                                     (62)
	Type -> 'char'                                     (63)
	Type -> 'float'                                    (64)
	Type -> 'int'                                      (65)
	Type -> 'void'                                     (66)
	VarDeclInit -> Ident '=' ComplexRExpr              (67)
	ComplexRExpr -> RExpr                              (68)
	ComplexRExpr -> '{' ListComplexRExpr '}'           (69)
	ListComplexRExpr -> ComplexRExpr                   (70)
	ListComplexRExpr -> ComplexRExpr ',' ListComplexRExpr   (71)
	ListParameter ->                                   (72)
	ListParameter -> Parameter                         (73)
	ListParameter -> Parameter ',' ListParameter       (74)
	Parameter -> Modality Type Ident                   (75)
	Modality ->                                        (76)
	Modality -> 'val'                                  (77)
	Modality -> 'ref'                                  (78)
	Modality -> 'const'                                (79)
	Modality -> 'res'                                  (80)
	Modality -> 'valres'                               (81)
	Modality -> 'name'                                 (82)
	StmtDecl -> Decl                                   (83)
	StmtDecl -> Stmt                                   (84)
	ListStmt ->                                        (85)
	ListStmt -> ListStmt Stmt                          (86)
	Stmt -> FunCall ';'                                (87)
	Stmt -> '{' ListStmtDecl '}'                       (88)
	Stmt -> JumpStmt ';'                               (89)
	Stmt -> IterStmt                                   (90)
	Stmt -> SelectionStmt                              (91)
	Stmt -> LExpr Assignment_op RExpr ';'              (92)
	Stmt -> LExpr ';'                                  (93)
	Assignment_op -> '='                               (94)
	Assignment_op -> '*='                              (95)
	Assignment_op -> '+='                              (96)
	Assignment_op -> '/='                              (97)
	Assignment_op -> '-='                              (98)
	Assignment_op -> '^='                              (99)
	Assignment_op -> '&='                              (100)
	Assignment_op -> '|='                              (101)
	JumpStmt -> 'break'                                (102)
	JumpStmt -> 'continue'                             (103)
	JumpStmt -> 'return'                               (104)
	JumpStmt -> 'return' '(' RExpr ')'                 (105)
	SelectionStmt -> 'if' '(' RExpr ')' ListStmtDecl   (106)
	SelectionStmt -> 'if' '(' RExpr ')' ListStmtDecl 'else' ListStmtDecl   (107)
	IterStmt -> 'while' '(' RExpr ')' ListStmtDecl     (108)
	IterStmt -> 'do' ListStmtDecl 'while' '(' RExpr ')' ';'   (109)
	IterStmt -> 'for' '(' Stmt ';' RExpr ';' Stmt ')' ListStmtDecl   (110)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'&='           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	'/='           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'False'        { PT _ (TS _ 27) }
	'True'         { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'^'            { PT _ (TS _ 31) }
	'^='           { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'break'        { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'const'        { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'do'           { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'float'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'name'         { PT _ (TS _ 44) }
	'ref'          { PT _ (TS _ 45) }
	'res'          { PT _ (TS _ 46) }
	'return'       { PT _ (TS _ 47) }
	'val'          { PT _ (TS _ 48) }
	'valres'       { PT _ (TS _ 49) }
	'void'         { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'{'            { PT _ (TS _ 52) }
	'|='           { PT _ (TS _ 53) }
	'||'           { PT _ (TS _ 54) }
	'}'            { PT _ (TS _ 55) }
	'\\'           { PT _ (TS _ 56) }
	L_integ        { PT _ (TI $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_doubl        { PT _ (TD $$) }
	L_ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pStmtDecl rule  1
	%start_pRExpr   rule  2
	%start_pLExpr   rule  3
	Integer         rule  4
	Char            rule  5
	Double          rule  6
	Ident           rule  7
	Boolean         rules 8, 9
	RExpr           rules 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32
	FunCall         rule  33
	ListRExpr       rules 34, 35, 36
	LExpr           rules 37, 38, 39, 40
	LExpr1          rules 41, 42, 43
	LExpr2          rules 44, 45
	BLExpr          rules 46, 47
	Program         rule  48
	ListDecl        rules 49, 50
	Decl            rules 51, 52, 53
	ListVarDeclInit rules 54, 55
	ListIdent       rules 56, 57
	ListStmtDecl    rules 58, 59
	Type            rules 60, 61, 62, 63, 64, 65, 66
	VarDeclInit     rule  67
	ComplexRExpr    rules 68, 69
	ListComplexRExpr rules 70, 71
	ListParameter   rules 72, 73, 74
	Parameter       rule  75
	Modality        rules 76, 77, 78, 79, 80, 81, 82
	StmtDecl        rules 83, 84
	ListStmt        rules 85, 86
	Stmt            rules 87, 88, 89, 90, 91, 92, 93
	Assignment_op   rules 94, 95, 96, 97, 98, 99, 100, 101
	JumpStmt        rules 102, 103, 104, 105
	SelectionStmt   rules 106, 107
	IterStmt        rules 108, 109, 110

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 49
	'char'         reduce using rule 49
	'float'        reduce using rule 49
	'int'          reduce using rule 49
	'void'         reduce using rule 49
	%eof           reduce using rule 49

	Program        goto state 53
	ListDecl       goto state 54

State 1


	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	'bool'         shift, and enter state 40
	'break'        shift, and enter state 41
	'char'         shift, and enter state 42
	'continue'     shift, and enter state 43
	'do'           shift, and enter state 44
	'float'        shift, and enter state 45
	'for'          shift, and enter state 46
	'if'           shift, and enter state 47
	'int'          shift, and enter state 48
	'return'       shift, and enter state 49
	'void'         shift, and enter state 50
	'while'        shift, and enter state 51
	'{'            shift, and enter state 52
	L_ident        shift, and enter state 15

	Ident          goto state 30
	FunCall        goto state 31
	LExpr          goto state 32
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10
	Decl           goto state 33
	Type           goto state 34
	StmtDecl       goto state 35
	Stmt           goto state 36
	JumpStmt       goto state 37
	SelectionStmt  goto state 38
	IterStmt       goto state 39

State 2


	'!'            shift, and enter state 23
	'('            shift, and enter state 24
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 25
	'--'           shift, and enter state 14
	'False'        shift, and enter state 26
	'True'         shift, and enter state 27
	L_integ        shift, and enter state 5
	L_charac       shift, and enter state 28
	L_doubl        shift, and enter state 29
	L_ident        shift, and enter state 15

	Integer        goto state 16
	Char           goto state 17
	Double         goto state 18
	Ident          goto state 19
	Boolean        goto state 20
	RExpr          goto state 21
	LExpr          goto state 22
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 3


	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	L_ident        shift, and enter state 15

	Ident          goto state 6
	LExpr          goto state 7
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 4


	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	'%'            reduce using rule 4
	'&&'           reduce using rule 4
	'&='           reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'*='           reduce using rule 4
	'+'            reduce using rule 4
	'+='           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'-='           reduce using rule 4
	'/'            reduce using rule 4
	'/='           reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	']'            reduce using rule 4
	'^'            reduce using rule 4
	'^='           reduce using rule 4
	'|='           reduce using rule 4
	'||'           reduce using rule 4
	'}'            reduce using rule 4
	%eof           reduce using rule 4


State 6

	BLExpr -> Ident .                                   (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'&='           reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'*='           reduce using rule 47
	'+'            reduce using rule 47
	'++'           reduce using rule 47
	'+='           reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'--'           reduce using rule 47
	'-='           reduce using rule 47
	'/'            reduce using rule 47
	'/='           reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	'^'            reduce using rule 47
	'^='           reduce using rule 47
	'|='           reduce using rule 47
	'||'           reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47


State 7

	%start_pLExpr -> LExpr .                            (rule 3)

	%eof           accept


State 8

	LExpr -> LExpr1 .                                   (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	'&='           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'*='           reduce using rule 37
	'+'            reduce using rule 37
	'+='           reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'-='           reduce using rule 37
	'/'            reduce using rule 37
	'/='           reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'='            reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	']'            reduce using rule 37
	'^'            reduce using rule 37
	'^='           reduce using rule 37
	'|='           reduce using rule 37
	'||'           reduce using rule 37
	'}'            reduce using rule 37
	%eof           reduce using rule 37


State 9

	LExpr1 -> LExpr2 .                                  (rule 41)
	LExpr1 -> LExpr2 . '++'                             (rule 42)
	LExpr1 -> LExpr2 . '--'                             (rule 43)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'&='           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'*='           reduce using rule 41
	'+'            reduce using rule 41
	'++'           shift, and enter state 106
	'+='           reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'--'           shift, and enter state 107
	'-='           reduce using rule 41
	'/'            reduce using rule 41
	'/='           reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	']'            reduce using rule 41
	'^'            reduce using rule 41
	'^='           reduce using rule 41
	'|='           reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	%eof           reduce using rule 41


State 10

	LExpr2 -> BLExpr .                                  (rule 45)
	BLExpr -> BLExpr . '[' RExpr ']'                    (rule 46)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	'&='           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'*='           reduce using rule 45
	'+'            reduce using rule 45
	'++'           reduce using rule 45
	'+='           reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'--'           reduce using rule 45
	'-='           reduce using rule 45
	'/'            reduce using rule 45
	'/='           reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            shift, and enter state 105
	']'            reduce using rule 45
	'^'            reduce using rule 45
	'^='           reduce using rule 45
	'|='           reduce using rule 45
	'||'           reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 11

	LExpr2 -> '(' . LExpr ')'                           (rule 44)

	'('            shift, and enter state 11
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'--'           shift, and enter state 14
	L_ident        shift, and enter state 15

	Ident          goto state 6
	LExpr          goto state 104
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 12

	LExpr -> '*' . RExpr                                (rule 38)

	'!'            shift, and enter state 23
	'('            shift, and enter state 24
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 25
	'--'           shift, and enter state 14
	'False'        shift, and enter state 26
	'True'         shift, and enter state 27
	L_integ        shift, and enter state 5
	L_charac       shift, and enter state 28
	L_doubl        shift, and enter state 29
	L_ident        shift, and enter state 15

	Integer        goto state 16
	Char           goto state 17
	Double         goto state 18
	Ident          goto state 19
	Boolean        goto state 20
	RExpr          goto state 103
	LExpr          goto state 22
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 13

	LExpr -> '++' . LExpr1                              (rule 39)

	'('            shift, and enter state 11
	L_ident        shift, and enter state 15

	Ident          goto state 6
	LExpr1         goto state 102
	LExpr2         goto state 9
	BLExpr         goto state 10

State 14

	LExpr -> '--' . LExpr1                              (rule 40)

	'('            shift, and enter state 11
	L_ident        shift, and enter state 15

	Ident          goto state 6
	LExpr1         goto state 101
	LExpr2         goto state 9
	BLExpr         goto state 10

State 15

	Ident -> L_ident .                                  (rule 7)

	'!='           reduce using rule 7
	'%'            reduce using rule 7
	'&&'           reduce using rule 7
	'&='           reduce using rule 7
	'('            reduce using rule 7
	')'            reduce using rule 7
	'*'            reduce using rule 7
	'*='           reduce using rule 7
	'+'            reduce using rule 7
	'++'           reduce using rule 7
	'+='           reduce using rule 7
	','            reduce using rule 7
	'-'            reduce using rule 7
	'--'           reduce using rule 7
	'-='           reduce using rule 7
	'/'            reduce using rule 7
	'/='           reduce using rule 7
	';'            reduce using rule 7
	'<'            reduce using rule 7
	'<='           reduce using rule 7
	'='            reduce using rule 7
	'=='           reduce using rule 7
	'>'            reduce using rule 7
	'>='           reduce using rule 7
	'['            reduce using rule 7
	']'            reduce using rule 7
	'^'            reduce using rule 7
	'^='           reduce using rule 7
	'|='           reduce using rule 7
	'||'           reduce using rule 7
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 16

	RExpr -> Integer .                                  (rule 29)

	'!='           reduce using rule 29
	'%'            reduce using rule 29
	'&&'           reduce using rule 29
	'&='           reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'*='           reduce using rule 29
	'+'            reduce using rule 29
	'+='           reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'-='           reduce using rule 29
	'/'            reduce using rule 29
	'/='           reduce using rule 29
	';'            reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'='            reduce using rule 29
	'=='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	']'            reduce using rule 29
	'^'            reduce using rule 29
	'^='           reduce using rule 29
	'|='           reduce using rule 29
	'||'           reduce using rule 29
	'}'            reduce using rule 29
	%eof           reduce using rule 29


State 17

	RExpr -> Char .                                     (rule 30)

	'!='           reduce using rule 30
	'%'            reduce using rule 30
	'&&'           reduce using rule 30
	'&='           reduce using rule 30
	')'            reduce using rule 30
	'*'            reduce using rule 30
	'*='           reduce using rule 30
	'+'            reduce using rule 30
	'+='           reduce using rule 30
	','            reduce using rule 30
	'-'            reduce using rule 30
	'-='           reduce using rule 30
	'/'            reduce using rule 30
	'/='           reduce using rule 30
	';'            reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'='            reduce using rule 30
	'=='           reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	']'            reduce using rule 30
	'^'            reduce using rule 30
	'^='           reduce using rule 30
	'|='           reduce using rule 30
	'||'           reduce using rule 30
	'}'            reduce using rule 30
	%eof           reduce using rule 30


State 18

	RExpr -> Double .                                   (rule 31)

	'!='           reduce using rule 31
	'%'            reduce using rule 31
	'&&'           reduce using rule 31
	'&='           reduce using rule 31
	')'            reduce using rule 31
	'*'            reduce using rule 31
	'*='           reduce using rule 31
	'+'            reduce using rule 31
	'+='           reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	'-='           reduce using rule 31
	'/'            reduce using rule 31
	'/='           reduce using rule 31
	';'            reduce using rule 31
	'<'            reduce using rule 31
	'<='           reduce using rule 31
	'='            reduce using rule 31
	'=='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	']'            reduce using rule 31
	'^'            reduce using rule 31
	'^='           reduce using rule 31
	'|='           reduce using rule 31
	'||'           reduce using rule 31
	'}'            reduce using rule 31
	%eof           reduce using rule 31


State 19

	RExpr -> Ident . '(' ListRExpr ')'                  (rule 28)
	BLExpr -> Ident .                                   (rule 47)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'&='           reduce using rule 47
	'('            shift, and enter state 100
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'*='           reduce using rule 47
	'+'            reduce using rule 47
	'++'           reduce using rule 47
	'+='           reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'--'           reduce using rule 47
	'-='           reduce using rule 47
	'/'            reduce using rule 47
	'/='           reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	'^'            reduce using rule 47
	'^='           reduce using rule 47
	'|='           reduce using rule 47
	'||'           reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47


State 20

	RExpr -> Boolean .                                  (rule 32)

	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'&='           reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'*='           reduce using rule 32
	'+'            reduce using rule 32
	'+='           reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'-='           reduce using rule 32
	'/'            reduce using rule 32
	'/='           reduce using rule 32
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'='            reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	']'            reduce using rule 32
	'^'            reduce using rule 32
	'^='           reduce using rule 32
	'|='           reduce using rule 32
	'||'           reduce using rule 32
	'}'            reduce using rule 32
	%eof           reduce using rule 32


State 21

	%start_pRExpr -> RExpr .                            (rule 2)
	RExpr -> RExpr . '||' RExpr                         (rule 11)
	RExpr -> RExpr . '&&' RExpr                         (rule 12)
	RExpr -> RExpr . '==' RExpr                         (rule 13)
	RExpr -> RExpr . '!=' RExpr                         (rule 14)
	RExpr -> RExpr . '<' RExpr                          (rule 15)
	RExpr -> RExpr . '<=' RExpr                         (rule 16)
	RExpr -> RExpr . '>' RExpr                          (rule 17)
	RExpr -> RExpr . '>=' RExpr                         (rule 18)
	RExpr -> RExpr . '+' RExpr                          (rule 19)
	RExpr -> RExpr . '-' RExpr                          (rule 20)
	RExpr -> RExpr . '*' RExpr                          (rule 21)
	RExpr -> RExpr . '/' RExpr                          (rule 22)
	RExpr -> RExpr . '%' RExpr                          (rule 23)
	RExpr -> RExpr . '^' RExpr                          (rule 24)

	'!='           shift, and enter state 86
	'%'            shift, and enter state 87
	'&&'           shift, and enter state 88
	'*'            shift, and enter state 89
	'+'            shift, and enter state 90
	'-'            shift, and enter state 91
	'/'            shift, and enter state 92
	'<'            shift, and enter state 93
	'<='           shift, and enter state 94
	'=='           shift, and enter state 95
	'>'            shift, and enter state 96
	'>='           shift, and enter state 97
	'^'            shift, and enter state 98
	'||'           shift, and enter state 99
	%eof           accept


State 22

	RExpr -> LExpr .                                    (rule 27)

	'!='           reduce using rule 27
	'%'            reduce using rule 27
	'&&'           reduce using rule 27
	'&='           reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'*='           reduce using rule 27
	'+'            reduce using rule 27
	'+='           reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'-='           reduce using rule 27
	'/'            reduce using rule 27
	'/='           reduce using rule 27
	';'            reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'='            reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	']'            reduce using rule 27
	'^'            reduce using rule 27
	'^='           reduce using rule 27
	'|='           reduce using rule 27
	'||'           reduce using rule 27
	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 23

	RExpr -> '!' . RExpr                                (rule 25)

	'!'            shift, and enter state 23
	'('            shift, and enter state 24
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 25
	'--'           shift, and enter state 14
	'False'        shift, and enter state 26
	'True'         shift, and enter state 27
	L_integ        shift, and enter state 5
	L_charac       shift, and enter state 28
	L_doubl        shift, and enter state 29
	L_ident        shift, and enter state 15

	Integer        goto state 16
	Char           goto state 17
	Double         goto state 18
	Ident          goto state 19
	Boolean        goto state 20
	RExpr          goto state 85
	LExpr          goto state 22
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 24

	RExpr -> '(' . RExpr ')'                            (rule 10)
	LExpr2 -> '(' . LExpr ')'                           (rule 44)

	'!'            shift, and enter state 23
	'('            shift, and enter state 24
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 25
	'--'           shift, and enter state 14
	'False'        shift, and enter state 26
	'True'         shift, and enter state 27
	L_integ        shift, and enter state 5
	L_charac       shift, and enter state 28
	L_doubl        shift, and enter state 29
	L_ident        shift, and enter state 15

	Integer        goto state 16
	Char           goto state 17
	Double         goto state 18
	Ident          goto state 19
	Boolean        goto state 20
	RExpr          goto state 83
	LExpr          goto state 84
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 25

	RExpr -> '-' . RExpr                                (rule 26)

	'!'            shift, and enter state 23
	'('            shift, and enter state 24
	'*'            shift, and enter state 12
	'++'           shift, and enter state 13
	'-'            shift, and enter state 25
	'--'           shift, and enter state 14
	'False'        shift, and enter state 26
	'True'         shift, and enter state 27
	L_integ        shift, and enter state 5
	L_charac       shift, and enter state 28
	L_doubl        shift, and enter state 29
	L_ident        shift, and enter state 15

	Integer        goto state 16
	Char           goto state 17
	Double         goto state 18
	Ident          goto state 19
	Boolean        goto state 20
	RExpr          goto state 82
	LExpr          goto state 22
	LExpr1         goto state 8
	LExpr2         goto state 9
	BLExpr         goto state 10

State 26

	Boolean -> 'False' .                                (rule 9)

	'!='           reduce using rule 9
	'%'            reduce using rule 9
	'&&'           reduce using rule 9
	'&='           reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'*='           reduce using rule 9
	'+'            reduce using rule 9
	'+='           reduce using rule 9
	','            reduce using rule 9
	'-'            reduce using rule 9
	'-='           reduce using rule 9
	'/'            reduce using rule 9
	'/='           reduce using rule 9
	';'            reduce using rule 9
	'<'            reduce using rule 9
	'<='           reduce using rule 9
	'='            reduce using rule 9
	'=='           reduce using rule 9
	'>'            reduce using rule 9
	'>='           reduce using rule 9
	']'            reduce using rule 9
	'^'            reduce using rule 9
	'^='           reduce using rule 9
	'|='           reduce using rule 9
	'||'           reduce using rule 9
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 27

	Boolean -> 'True' .                                 (rule 8)

	'!='           reduce using rule 8
	'%'            reduce using rule 8
	'&&'           reduce using rule 8
	'&='           reduce using rule 8
	')'            reduce using rule 8
	'*'            reduce using rule 8
	'*='           reduce using rule 8
	'+'            reduce using rule 8
	'+='           reduce using rule 8
	','            reduce using rule 8
	'-'            reduce using rule 8
	'-='           reduce using rule 8
	'/'            reduce using rule 8
	'/='           reduce using rule 8
	';'            reduce using rule 8
	'<'            reduce using rule 8
	'<='           reduce using rule 8
	'='            reduce using rule 8
	'=='           reduce using rule 8
	'>'            reduce using rule 8
	'>='           reduce using rule 8
	']'            reduce using rule 8
	'^'            reduce using rule 8
	'^='           reduce using rule 8
	'|='           reduce using rule 8
	'||'           reduce using rule 8
	'}'            reduce using rule 8
	%eof           reduce using rule 8


State 28

	Char -> L_charac .                                  (rule 5)

	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&&'           reduce using rule 5
	'&='           reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'*='           reduce using rule 5
	'+'            reduce using rule 5
	'+='           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'-='           reduce using rule 5
	'/'            reduce using rule 5
	'/='           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	']'            reduce using rule 5
	'^'            reduce using rule 5
	'^='           reduce using rule 5
	'|='           reduce using rule 5
	'||'           reduce using rule 5
	'}'            reduce using rule 5
	%eof           reduce using rule 5


State 29

	Double -> L_doubl .                                 (rule 6)
